Perubahan Visi dan Misi

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 </div>
                                 <h3 class="fw-bold mb-0">Visi Sekolah</h3>
                             </div>
-                            <p class="text-muted fst-italic">"Terwujudnya Peserta Didik yang Beriman, Cerdas, Terampil, Mandiri dan Berwawasan Global."</p>
+                            <p class="text-muted fst-italic">"Terwujudnya Murid Yang Memiliki Karakter Beriman dan Bertakwa Kepada Tuhan Yang Maha Esa, Bernalar Kritis, Sehat, Berwawasan Lingkungan, Serta Terintegrasi Dengan Digital."</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -289,9 +289,15 @@
                                 <h3 class="fw-bold mb-0">Misi Sekolah</h3>
                             </div>
                             <ul class="text-muted ps-3 mb-0 small" style="line-height: 1.8;">
-                                <li>Mewujudkan pendidikan yang adil dan merata.</li>
-                                <li>Meningkatkan mutu lulusan yang berdaya saing.</li>
-                                <li>Menciptakan lingkungan belajar yang kondusif.</li>
+                                <li>Menanamkan Keimanan dan Ketakwaan dalam setiap aktifitas pembelajaran dan kehidupan sehari-hari baik dilingkungan sekolah maupun dilingkungan masyarakat.</li>
+                                <li>Mengembangkan keterampilan literasi agar murid mampu memilah informasi, berpikir logis, serta mengambil keputusan yang tepat.</li>
+                                <li>Meningkatkan minat baca murid melalui kegiatan yang inovatif.</li>
+                                <li>Meningkatkan kesadaran Murid akan pentingnya pola hidup sehat melalui edukasi kesehatan dan olahraga rutin.</li>
+                                <li>Menumbuhkan kebiasaan makan makanan bergizi seimbang dan pola hidup bersih.</li>
+                                <li>Menumbuhkan budaya untuk melestarikan dan mencegah pencemaran serta kerusakan lingkungan di kalangan warga sekolah.</li>
+                                <li>Menumbuhkan kesadaran, kepedulian dan tanggung jawab terhadap lingkungan hidup.</li>
+                                <li>Mengintegrasikan teknologi digital dalam proses pembelajaran untuk meningkatkan efektifitas dan kreatifitas Murid.</li>
+                                <li>Membelaki Murid dengan keterampilan digital di era revolusi industri 4.0.</li>
                             </ul>
                         </div>
                     </div>
