--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                         </div>
                                         <div class="d-flex align-items-center">
                                             <i class="fas fa-phone text-primary me-3 fa-lg"></i>
-                                            <span>082344099606</span>
+                                            <span>0813-4189-2790</span>
                                         </div>
                                     </div>
                                 </div>
